--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "next": "14.2.14",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
     "react-spinners": "^0.14.1",
     "save": "^2.9.0",
-    "sweetalert2": "^11.14.5",
-    "yup": "^1.4.0"
+    "sweetalert2": "^11.16.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
